# libgnomekbd

./: .cvsignore  .editorconfig  .gitignore  .tm_project2.cache  ChangeLog  ChangeLog.libgswitchit  ChangeLog.libkbdraw  ChangeLog.obsolete  MAINTAINERS  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.in  libgnomekbd.doap  libgnomekbd.pc.in  libgnomekbdui.pc.in  meson.build  meson_options.txt
.anjuta/: dock-layout.xml
capplet/: .cvsignore  .gitignore  Makefile.am  gkbd-indicator-plugins-add.c  gkbd-indicator-plugins-capplet.c  gkbd-indicator-plugins-capplet.desktop.in.in  gkbd-indicator-plugins-capplet.h
data/icons/: meson.build
debian/: changelog  control  control.in  copyright  gkbd-capplet.install  libgnomekbd-common.install  libgnomekbd-dev.install  libgnomekbd4.install  libgnomekbdui-dev.install  libgnomekbdui4.install  rules  watch
libgnomekbd/: .cvsignore  .gitignore  Makefile.am  desktop_gnome_peripherals_keyboard_xkb.schemas.in  gkbd-config-private.h  gkbd-config-registry.c  gkbd-config-registry.h  gkbd-config-registry.xml  gkbd-configuration.c  gkbd-configuration.h  gkbd-desktop-config.c  gkbd-desktop-config.h  gkbd-geometry-parser.c  gkbd-geometry-parser.h  gkbd-indicator-config.c  gkbd-indicator-config.h  gkbd-indicator-plugin-manager.c  gkbd-indicator-plugin-manager.h  gkbd-indicator-plugin.h  gkbd-indicator.c  gkbd-indicator.h  gkbd-keyboard-config.c  gkbd-keyboard-config.h  gkbd-keyboard-display.c  gkbd-keyboard-display.desktop.in  gkbd-keyboard-display.desktop.in.in  gkbd-keyboard-drawing-private.h  gkbd-keyboard-drawing.c  gkbd-keyboard-drawing.h  gkbd-status.c  gkbd-status.h  gkbd-util.c  gkbd-util.h  libgnomekbd.convert  meson.build  org.gnome.libgnomekbd.desktop.gschema.xml  org.gnome.libgnomekbd.desktop.gschema.xml.in.in  org.gnome.libgnomekbd.gschema.xml  org.gnome.libgnomekbd.gschema.xml.in  org.gnome.libgnomekbd.gschema.xml.in.in  (+3 more)
libgnomekbd/backup/: Makefile  Makefile.am  gkb-config-private.h  gkb-config-registry.c  gkb-config-registry.h  gkb-config-registry.xml  gkb-desktop-config.c  gkb-desktop-config.h  gkb-indicator-config.c  gkb-indicator-config.h  gkb-indicator-plugin-manager.c  gkb-indicator-plugin-manager.h  gkb-indicator-plugin.h  gkb-indicator.c  gkb-indicator.h  gkb-keyboard-config.c  gkb-keyboard-config.h  gkb-keyboard-drawing.c  gkb-keyboard-drawing.h  gkb-util.c  gkb-util.h
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+46 more)
test/: .cvsignore  .gitignore  Makefile.am  gkbd-config-registry-client.sh  gkbd-config-registry-server.c  gkbd-indicator-test.c  gkbd-keyboard-drawing-test.c  gkbd-status-test.c  meson.build  python_test.py  test.js
tools/: gkbd-keyboard-display.c  meson.build
trunk/: ChangeLog  configure.in
trunk/.anjuta/: anjuta.session
trunk/capplet/: Makefile.am  gkbd-indicator-plugins-add.c  gkbd-indicator-plugins-capplet.h  gkbd-indicator-plugins.glade
trunk/libgnomekbd/: desktop_gnome_peripherals_keyboard_xkb.schemas.in  gkbd-config-registry.c  gkbd-config-registry.xml  gkbd-desktop-config.c  gkbd-desktop-config.h  gkbd-indicator-config.c  gkbd-indicator-config.h  gkbd-indicator-plugin-manager.c  gkbd-indicator-plugin-manager.h  gkbd-indicator.h  gkbd-keyboard-drawing-marshal.list  gkbd-keyboard-drawing.c  gkbd-keyboard-drawing.h  gkbd-util.c
trunk/po/: .cvsignore  ChangeLog  POTFILES.in  bg.po  ru.po
trunk/test/: .cvsignore  gkbd-indicator-test.c
